<resources>
    <!--    APP CONTENT-->
    <string name="app_name">Spotter</string>
    <string name="spot_check">Spot Check</string>
    <string name="sort_result"><u>Sort by Result</u></string>
    <string name="sort_date"><u>Sort by Date</u></string>
    <string name="delete_spot"><u>Delete</u></string>
    <string name="notes">Notes</string>
    <string name="search_dates">Search Dates</string>
    <string name="send">Send</string>
    <string name="clear">Clear Search</string>
    <string name="search_result_msg">Item(s) below match the search, even though not all fields are shown</string>
    <string name="search_hint">Search by all fields</string>
    <string name="email_title">Email Spot Checks to the office</string>
    <string name="email_latest">Email only Spot Checks that have not being emailed</string>
    <string name="email_all">Email all the Spot Checks</string>
    <string name="start_img_desc">No records found</string>
    <string name="start_msg">There are not Spot Checks :( \n Tap the \'Spot Check\' button to add one</string>

    <!--    Spot Check-->
    <string name="placeholder_plate"># PLATE</string>
    <string name="label_plate">Plate</string>
    <string name="label_date">Date</string>
    <string name="label_car">Car</string>
    <string name="label_make">MAKE</string>
    <string name="label_model">MODEL</string>
    <string name="label_location">LOCATION</string>
    <string name="label_location_lower">Location</string>
    <string name="label_result">RESULT</string>
    <string name="label_result_lower">Result</string>
    <string name="label_notes">NOTES</string>
    <string name="label_notes_lower">Notes</string>
    <string name="button_create">Create</string>
    <string name="result_no_action">No action required</string>
    <string name="no_record_car">Car: No record</string>
    <string name="no_record">No record</string>

    <!--    Images-->
    <string name="icon_send">Send icon</string>
    <string name="icon_grid">List/Grid icon</string>
    <string name="image_office">Desktop office image</string>
    <string name="image_arrow">Right Arrow image</string>

    <!--    Spinner-->
    <string name="result_advice_given">Advice given</string>
    <string name="result_produced_documents">Produced documents</string>
    <string name="result_driver_detained">Driver detained</string>
    <string-array name="results_array">
        <item>No action required</item>
        <item>Advice given</item>
        <item>Produced documents</item>
        <item>Driver detained</item>
    </string-array>
</resources>